# wiki-con

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/wiki_con/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
