[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source= ["wiki_con"]

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "wiki_con"
version = "0.1.0"
description = "A hypermodern Python project"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kevinbowen777/wiki_con/"
repository = "https://github.com/kevinbowen777/wiki_con/"
keywords = ["hypermodern", "wiki_con"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4"}
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
wiki_con = "wiki_con.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
